package busqueda;

public interface IFachadaBusqueda {
    void buscar(String fechaSalida, String fechaRegreso, String origen, String destino);
}